@startuml
title Q7 - Diagramme Classes avec fonctionnalités

class "Jeu" {
    - laby : Labyrinthe
    - hero : Aventurier
    - monstres : ArrayList<Personnage>
    - gestionnaireMonstres : GestionnaireMonstres

    - cases : ArrayList<Case>
    - fin : int[]

    - explosionAffichage : ArrayList<int[]>
    - recharger : boolean
    + {static} HAUT : String = "Haut"
    + {static} BAS : String = "Bas"
    + {static} GAUCHE : String = "Gauche"
    + {static} DROITE : String = "Droite"
    + {static} SPACE : String = "Space"

    + getGestionnaireMonstres() : GestionnaireMonstres
    + getHero() : Aventurier
    + getLaby() : Labyrinthe
    + getCases() : ArrayList<Case>
    + getExplosionAffichage() : ArrayList<int[]>
    + getMonstres() : ArrayList<Personnage>
    + getCase(x : int, y : int) : Case
    + getChar(x : int, y : int) : char
    + setHero(hero : Aventurier) : void
    + setLaby(laby : Labyrinthe) : void

    + detruire(x : int, y : int) : void
    + getSuivant(x : int, y : int, commandeUser : Commande) : int[]
    + addBombe(x : int, y : int) : void
    + verifierDeplacement(x : int, y : int, commandeUser : Commande) : void
    + evoluer(commandeUser : Commande) : void
    + etreFini() : boolean

    + evoluer(action : String) : void
    + verifierDeplacement(x : int, y : int, action : String) : void
    + jeuToString() : String
}

class GestionnaireMonstres {
    - jeu : Jeu
    - timer : Timer

    + GestionnaireMonstres(jeu : Jeu)
    + startMonsters() : void
    + monstreAttaque(x : int, y : int) : void
    + evoluerMonster(commandeUser : Commande) : void
    + verifMort() : void
}

class Chargement {
    + {static} chargerNiveau(jeu : Jeu, nomFichier : String) : void
    + {static} convertLab(nomFichier : String, ligne : ArrayList<String>) : Labyrinthe
}

class DessinLaby {
    - jeu : Jeu

    + DessinLaby(jeu : Jeu)
    + dessiner(image : BufferedImage) : void
}

package "entite" {
    abstract class Personnage {
        # x : int
        # y : int
        # vie : int

        + Personnage(x : int, y : int, vie : int)

        + getX() : int
        + getY() : int
        + getVie() : int
        + setPos(x : int, y : int) : void

        + addVie(i : int) : void
        + etreMort() : boolean
        + attaquer(victime : Personnage) : void
    }

    class Aventurier {
        + Aventurier(x : int, y : int, vie : int)
        + attaquer(jeu : Jeu) : void
    }

    class Monstre {
        + Monstre(x : int, y : int, vie : int)
    }
}

package "environnement" {

    interface Case <<interface>> {
        + getType() : String
        + getCoord() : int[]

        + effet(perso : Personnage) : void
    }

    class Labyrinthe {
        - murs : boolean[][]
        + {static} MUR : char = '#'
        + {static} HERO : char = '@'
        + {static} MONSTRE : char = '£'
        + {static} FIN : char = '&'
        + {static} VIDE : char = ' '
        + {static} PIEGE : char = '$'
        + {static} MurFriable : char = '*'
        + {static} BOMBE : char = 'B'

        + Labyrinthe(x : int, y : int)

        + getCase(x : int, y : int) : boolean

        + addMur(x : int, y : int) : void
        + returnSize() : int[]
    }

    class Piege {
        - x : int
        - y : int
        - isRevele : boolean

        + Piege(x : int, y : int)

        + getType() : String
        + getCoord() : int[]
        + getIsRevele() : boolean

        + effet(perso : Personnage) : void
    }

    class MurFriable {
        - x : int
        - y : int

        + MurFriable(x : int, y : int)

        + getType() : String
        + getCoord() : int[]

        + effet(perso : Personnage) : void
    }

    class Bombe {
        - x : int
        - y : int
        - jeu : Jeu

        + Bombe(x : int, y : int)

        + setJeu(jeu : Jeu) : void
        + getType() : String
        + getCoord() : int[]

        + effet(perso : Personnage) : void
    }
}

Case <|.. Piege
Case <|.. MurFriable
Case <|.. Bombe

package "exception" {
    class ActionInconnueException {
        + ActionInconnueException(message : String)
    }

    class FichierIncorrectException {
        + FichierIncorrectException(message : String)
    }
}

' ========================
' Relations
' ========================
Personnage <|-- Aventurier
Personnage <|-- Monstre

ActionInconnueException --|> RuntimeException
FichierIncorrectException --|> RuntimeException

DessinJeu <|.. DessinLaby

Jeu "1" --> "1" Labyrinthe : laby
Jeu "1" --> "1" Aventurier : hero
Jeu "1" *-- "1" GestionnaireMonstres : gestionnaireMonstres
Jeu "1" --> "*" Personnage : monstres
Jeu "1" --> "*" Case : cases

GestionnaireMonstres "1" --> "1" Jeu : jeu
Chargement --> Jeu : charge

DessinLaby "1" --> "1" Jeu : jeu

@enduml
